First paragraphs of the related work section

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -539,6 +539,16 @@ title = {The OpenModelica Integrated Modeling, Simulation and Optimization Envir
 doi = {10.3384/ECP18154206}
 }
 
+% BSN
+@INPROCEEDINGS{2021BSN,
+  author={Gil, Eric Bernd and Caldas, Ricardo and Rodrigues, Arthur and da Silva, Gabriel Levi Gomes and Rodrigues, Genaína Nunes and Pelliccione, Patrizio},
+  booktitle={2021 International Symposium on Software Engineering for Adaptive and Self-Managing Systems (SEAMS)}, 
+  title={Body Sensor Network: A Self-Adaptive System Exemplar in the Healthcare Domain}, 
+  year={2021},
+  volume={},
+  number={},
+  pages={224-230},
+  doi={10.1109/SEAMS51251.2021.00037}}
 
 %% CPS
 @article{2014PerceptionsSOTAV&VCPS,
@@ -570,13 +580,60 @@ doi = {10.1109/JSYST.2015.2496293}
   publisher={IEEE}
 }
 
-% BSN
-@INPROCEEDINGS{2021BSN,
-  author={Gil, Eric Bernd and Caldas, Ricardo and Rodrigues, Arthur and da Silva, Gabriel Levi Gomes and Rodrigues, Genaína Nunes and Pelliccione, Patrizio},
-  booktitle={2021 International Symposium on Software Engineering for Adaptive and Self-Managing Systems (SEAMS)}, 
-  title={Body Sensor Network: A Self-Adaptive System Exemplar in the Healthcare Domain}, 
-  year={2021},
-  volume={},
-  number={},
-  pages={224-230},
-  doi={10.1109/SEAMS51251.2021.00037}}
+@inproceedings{jacoby2010testing,
+  title={Testing adaptive probabilistic software components in cyber systems},
+  author={Jacoby, Grant and others},
+  booktitle={Monterey Workshop},
+  pages={228--238},
+  year={2010},
+  organization={Springer}
+}
+
+@article{zheng2015perceptions,
+  title={Perceptions on the state of the art in verification and validation in cyber-physical systems},
+  author={Zheng, Xi and Julien, Christine and Kim, Miryung and Khurshid, Sarfraz},
+  journal={IEEE Systems Journal},
+  volume={11},
+  number={4},
+  pages={2614--2627},
+  year={2015},
+  publisher={IEEE}
+}
+
+@inproceedings{lee2008cyber,
+  title={Cyber physical systems: Design challenges},
+  author={Lee, Edward A},
+  booktitle={2008 11th IEEE international symposium on object and component-oriented real-time distributed computing (ISORC)},
+  pages={363--369},
+  year={2008},
+  organization={IEEE}
+}
+
+@inproceedings{schatz2014role,
+  title={The role of models in engineering of cyber-physical systems--challenges and possibilities},
+  author={Sch{\"a}tz, Bernhard},
+  booktitle={Tagungsband des Dagstuhl-Workshops},
+  pages={91},
+  year={2014}
+}
+
+@article{dowdeswell2020finding,
+  title={Finding faults: A scoping study of fault diagnostics for Industrial Cyber--Physical Systems},
+  author={Dowdeswell, Barry and Sinha, Roopak and MacDonell, Stephen G},
+  journal={Journal of systems and software},
+  volume={168},
+  pages={110638},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{banerjee2011ensuring,
+  title={Ensuring safety, security, and sustainability of mission-critical cyber--physical systems},
+  author={Banerjee, Ayan and Venkatasubramanian, Krishna K and Mukherjee, Tridib and Gupta, Sandeep Kumar S},
+  journal={Proceedings of the IEEE},
+  volume={100},
+  number={1},
+  pages={283--299},
+  year={2011},
+  publisher={IEEE}
+}
