Finished first draft of the CPS section

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -149,6 +149,13 @@
   doi = {10.1007/978-3-642-33260-9_21}
 }
 
+@article{dubslaff2022causality,
+  title={Causality in Configurable Software Systems},
+  author={Dubslaff, Clemens and Weis, Kallistos and Baier, Christel and Apel, Sven},
+  journal={arXiv preprint arXiv:2201.07280},
+  year={2022}
+}
+
 @inproceedings{EffectBinaryRule2003,
   author = {González, Fabio and Dasgupta, Dipankar and Gomez, Jonatan},
   year = {2003},
@@ -636,4 +643,41 @@ doi = {10.1109/JSYST.2015.2496293}
   pages={283--299},
   year={2011},
   publisher={IEEE}
+}
+
+@inproceedings{jazdi2014cyber,
+  title={Cyber physical systems in the context of Industry 4.0},
+  author={Jazdi, Nasser},
+  booktitle={2014 IEEE international conference on automation, quality and testing, robotics},
+  pages={1--4},
+  year={2014},
+  organization={IEEE}
+}
+
+@article{bolbot2019vulnerabilities,
+  title={Vulnerabilities and safety assurance methods in Cyber-Physical Systems: A comprehensive review},
+  author={Bolbot, Victor and Theotokatos, Gerasimos and Bujorianu, Luminita Manuela and Boulougouris, Evangelos and Vassalos, Dracos},
+  journal={Reliability Engineering \& System Safety},
+  volume={182},
+  pages={179--193},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{bolbot2020novel,
+  title={A novel method for safety analysis of Cyber-Physical Systems—Application to a ship exhaust gas scrubber system},
+  author={Bolbot, Victor and Theotokatos, Gerasimos and Boulougouris, Evangelos and Psarros, George and Hamann, Rainer},
+  journal={Safety},
+  volume={6},
+  number={2},
+  pages={26},
+  year={2020},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@report{2018knkCrashReport,
+author = {Aircraft Accident Investigation Report},
+title = {Transportasi K. N. K.},
+institution = {Republic of Indonesia},
+year = {2018},
 }
